# selector

./: .gitignore  README.md  pyproject.toml
selector/: __init__.py  arguments.py  converters.py
tests/: test_converters.py  test_duplicate_args.py  test_optional_args.py  test_string_args.py
