[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "selector"
version = "0.3.0"
requires-python = ">=3.10"
dependencies = [
]

[project.optional-dependencies]
dev = [
    "mypy",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["."]
namespaces = false

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "single"
